# libsnort

./: Makefile.am  Makefile.in  README.md  aclocal.m4  configure.in  libpatch.txt
src/: Makefile.am  Makefile.in  main.c  sfdaq.c  snort.c  snort.h
src/control/: Makefile.in
src/detection-plugins/: Makefile.in
src/dynamic-examples/: Makefile.in
src/dynamic-examples/dynamic-preprocessor/: Makefile.in
src/dynamic-examples/dynamic-rule/: Makefile.in
src/dynamic-output/: Makefile.in
src/dynamic-output/libs/: Makefile.in  snort_output.pc
src/dynamic-output/plugins/: Makefile.in
src/dynamic-plugins/: Makefile.in
src/dynamic-plugins/sf_engine/: Makefile.in
src/dynamic-plugins/sf_engine/examples/: Makefile.in
src/dynamic-plugins/sf_preproc_example/: Makefile.in
src/dynamic-preprocessors/: Makefile.in
src/dynamic-preprocessors/dcerpc2/: Makefile.in
src/dynamic-preprocessors/dnp3/: Makefile.in
src/dynamic-preprocessors/dns/: Makefile.in
src/dynamic-preprocessors/file/: Makefile.in
src/dynamic-preprocessors/ftptelnet/: Makefile.in
src/dynamic-preprocessors/gtp/: Makefile.in
src/dynamic-preprocessors/imap/: Makefile.in
src/dynamic-preprocessors/libs/: Makefile.in  snort_preproc.pc
src/dynamic-preprocessors/modbus/: Makefile.in
src/dynamic-preprocessors/pop/: Makefile.in
src/dynamic-preprocessors/reputation/: Makefile.in
src/dynamic-preprocessors/rzb_saac/: Makefile.in
src/dynamic-preprocessors/sdf/: Makefile.in
src/dynamic-preprocessors/sip/: Makefile.in
src/dynamic-preprocessors/smtp/: Makefile.in
src/dynamic-preprocessors/ssh/: Makefile.in
src/dynamic-preprocessors/ssl/: Makefile.in
src/file-process/: Makefile.in
src/file-process/libs/: Makefile.in
src/output-plugins/: Makefile.in
src/parser/: Makefile.in
src/preprocessors/: Makefile.in
src/preprocessors/HttpInspect/: Makefile.in
src/preprocessors/HttpInspect/anomaly_detection/: Makefile.in
src/preprocessors/HttpInspect/client/: Makefile.in
src/preprocessors/HttpInspect/event_output/: Makefile.in
src/preprocessors/HttpInspect/include/: Makefile.in
src/preprocessors/HttpInspect/mode_inspection/: Makefile.in
src/preprocessors/HttpInspect/normalization/: Makefile.in
src/preprocessors/HttpInspect/server/: Makefile.in
src/preprocessors/HttpInspect/session_inspection/: Makefile.in
src/preprocessors/HttpInspect/user_interface/: Makefile.in
src/preprocessors/Stream5/: Makefile.in
src/sfutil/: Makefile.in
src/side-channel/: Makefile.in
src/side-channel/dynamic-plugins/: Makefile.in  snort_side_channel.pc
src/side-channel/plugins/: Makefile.in
src/target-based/: Makefile.in
src/win32/: Makefile.in
(+14 files in other folders)
